                       User-Visible WebAuth Changes

WebAuth 4.3.0 (unreleased)

    WebLogin now sets the HttpOnly flag on the single sign-on cookie, and
    on the test cookie used to probe whether cookies are supported.

    Add a new optional <userMessage> element to the specification of the
    <requestTokenResponse> reply from the WebKDC and a new error code.
    These are used to indicate a rejected authentication and to return an
    HTML error that should be displayed to the user.

    Support a new <error> return element inside the <authdata> reply from
    the user information service during WebLogin authentication.  Presence
    of this element indicates that the user information service has
    rejected this authentication.  The content is raw HTML content (which
    should be protected by a CDATA block in the XML) to display to the
    user.  Make appropriate changes to the webauth_user_info and
    webauth_webkdc_login APIs and to mod_webkdc to return this information
    via the new <userMessage> element and the new protocol error code.

    Add a new parameter, err_html, to the error page template in WebLogin.
    When this parameter is set, the contents should be used as the entire
    error message to display to the user.  Local WebLogin error templates
    should be updated to support this parameter.

    Fix wa_keyring compilation error when older versions of the WebAuth
    headers are installed in the APR header path.

WebAuth 4.2.2 (2012-07-19)

    Fix WebKDC::WebRequest error introduced in 4.2.0 that broke WebLogin
    functionality.

    Fix Kerberos context cleanup bug after storing delegated credentials
    in a file cache, introduced in 4.2.0.  This bug would cause segfaults
    in the child Apache process after completion of the request.

WebAuth 4.2.1 (2012-07-18)

    Fix error decoding keyrings from files on 64-bit systems, preventing
    all use of keyring files.  Reported by Kai Lanz.
